# bevy-rts

./: .gitignore  Cargo.toml
src/: main.rs
src/controls/: camera.rs  controls.rs  mod.rs  player.rs  selection.rs  window.rs
src/debug/: debug.rs
src/entities/: mod.rs  player.rs  world_objects.rs
src/resources/: mod.rs  player.rs  selection.rs  settings.rs
src/resources/materials/: ground.rs  marble.rs  metal.rs  mod.rs  tile.rs
src/ui/: cursor.rs
src/utils/: assets.rs  debug.rs
